styled the like button

--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -2,7 +2,7 @@
     {{quote.description}}
   </p>
   <div class="like">
-    <span><button (click)=likebuttonclick() class="btn btn-outline-success">like<i  aria-hidden="false"></i></button></span>
+    <span><button (click)=likebuttonclick() class="btn btn-outline-blue">like<i  aria-hidden="false"></i></button></span>
    <span>{{likes}}      </span>
    <span><button (click)=dislikebuttonclick() class="btn btn-outline-warning">dislike<i aria-hidden="false"></i></button></span>
    <span>{{dislikes}}</span><br><hr>
