--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,11 +1,11 @@
 <p>
     {{quote.description}}
   </p>
-  <div class="like">
-    <span><button (click)=likebuttonclick() class="btn btn-outline-blue">like<i  aria-hidden="false"></i></button></span>
+  <div class="like" style="font-size: 30px;">
+    <span><button (click)=likebuttonclick() class="btn btn-outline-success" style="font-weight: 900;">like<i  aria-hidden="false"></i></button></span>
    <span>{{likes}}      </span>
-   <span><button (click)=dislikebuttonclick() class="btn btn-outline-warning">dislike<i aria-hidden="false"></i></button></span>
+   <span><button (click)=dislikebuttonclick() class="btn btn-outline-warning" style="font-weight: 900;">dislike<i aria-hidden="false"></i></button></span>
    <span>{{dislikes}}</span><br><hr>
-
+  </div>
   <p>This quote was added on {{quote.completeDate|dateCount}} days</p>
   <button (click)= 'quoteDelete(true)' class="btn btn-outline-danger">Delete Quote</button><hr>
