made changes in the quote-form background

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="background-color: lightseagreen;">
+<div class="container-fluid" style="background-color: rgb(7, 173, 165);">
     <h2 class="text-center"  style="font-weight: 1000;">Add a new Quote</h2>
     <hr>
     <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
@@ -26,6 +26,6 @@
               <p>Date is required</p>
             </div>
         </div>
-        <button type="submit" class="btn btn-success">Add Quote</button>
+        <button type="submit" class="btn btn-success" style="font-weight: 1000;">Add Quote</button>
     </form>
   </div>
