--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,7 +1,8 @@
 <div class="container" style="background-image: url(https://bit.ly/2UwEcQ6);">
-  <h1>My Quote</h1>
+ 
+  <h1 style="font-size: 700%;">My Quote</h1>
 
-<p>How wise are you??Make out to your best mentors and add your quote;
+<p style="font-size:150% ;">How wise are you??Make out to your best mentors and add your quote;
 </p>
   <hr>
 
