edit on background image

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="background-color: rgb(7, 173, 165);">
+<div class="container-fluid" style="background-image: url(https://bit.ly/2JD3fKY);">
     <h2 class="text-center"  style="font-weight: 1000;">Add a new Quote</h2>
     <hr>
     <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
