--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="background-image: url(https://bit.ly/2UUVSDY);">
+<div class="container" style="background-image: url(https://bit.ly/3dTZvmc);">
  
   <h1 style="font-size: 700%;">My Quote</h1>
 
