--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,15 +1,23 @@
-<div class="container-fluid" style="background-color: rgb(52, 189, 182);">
+<div class="container-fluid" style="background-color: rgb(51, 192, 157);">
     <h2 class="text-center"  style="font-weight: 1000;">Add a new Quote</h2>
     <hr>
     <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
         <div class="form-group" style="font-weight: 900;">
   
-            <label for="name">Quote</label>
+            <label for="name">Name</label>
             <input type="text" class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name='ngModel' required>
             <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-              <p>Quote is required</p>
+              <p>Name is required</p>
             </div>
         </div>
+        <div class="form-group" style="font-weight: 900;">
+  
+          <label for="name">Quote</label>
+          <input type="text" class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name='ngModel' required>
+          <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+            <p>Quote is required</p>
+          </div>
+      </div>
         <div class="form-group" style="font-weight: 900;">
   
             <label for="description">Author</label>
