add a font weight in toggle buttons

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-md-6">
       <div *ngFor='let quote of quotes;let i = index'>
-        <div>
+        <div style="font-weight: 1000;">
           <h6 id={{i}} appStrikethrough>{{quote.name}} Added on {{quote.completeDate|date|uppercase}}</h6>
           <button (click)='toggleDetails(i)' class="btn btn-primary">Find Out</button>
         </div>
