--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group" style="font-weight: 900;">
   
-          <label for="name">Quote</label>
+          <label for="quote">Quote</label>
           <input type="text" class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name='ngModel' required>
           <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
             <p>Quote is required</p>
