--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -4,10 +4,10 @@
     <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
         <div class="form-group" style="font-weight: 900;">
   
-            <label for="name">Name</label>
+            <label for="name">Add your  name</label>
             <input type="text" class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name='ngModel' required>
             <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-              <p>Name is required</p>
+              <p>Your name is required</p>
             </div>
         </div>
         <div class="form-group" style="font-weight: 900;">
