--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -6,7 +6,7 @@
 </p>
   <hr>
 
-  <div class="row">
+  <div class="row"  style="font-weight: 800;">
     <div class="col-md-6">
       <div *ngFor='let quote of quotes;let i = index'>
         <div style="font-weight: 1000;">
