--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -6,8 +6,8 @@
 </p>
   <hr>
 
-  <div class="row"  style="font-weight: 800;">
-    <div class="col-md-6">
+  <div class="row"  style="font-weight: 1000;">
+    <div class="col-md-6" style="font-weight: 900;">
       <div *ngFor='let quote of quotes;let i = index'>
         <div style="font-weight: 1000;">
           <h6 id={{i}} appStrikethrough>{{quote.name}} Added on {{quote.completeDate|date|uppercase}}</h6>
