--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,31 +1,43 @@
-<div class="container-fluid" style="background-color: rgb(51, 192, 157);">
+<div class="container-fluid" style="background-color: lightseagreen;">
     <h2 class="text-center"  style="font-weight: 1000;">Add a new Quote</h2>
     <hr>
     <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
-        <div class="form-group" style="font-weight: 900;">
-  
-            <label for="name">Add your  name</label>
-            <input type="text" class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name='ngModel' required>
-            <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-              <p>Your name is required</p>
-            </div>
+      
+
+      <div class="form-group" style="font-weight: 900;">
+        <label for="description">AUTHOR</label>
+        <input type="text" class="form-control" id="description"  [(ngModel)]="newQuote.description" name="description" #description='ngModel' required>
+        <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
+          <p>Quote is required</p>
         </div>
-        <div class="form-group" style="font-weight: 900;">
+    </div>
+    <div class="form-group" style="font-weight: 900;">
   
-          <label for="quote">Quote</label>
-          <input type="text" class="form-control" id="quote" [(ngModel)]="newQuote.name" quote="quote" #name='ngModel' required>
-          <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-            <p>Quote is required</p>
-          </div>
+      <label for="name">QUOTE</label>
+      <textarea class="form-control" id="name" rows="4" [(ngModel)]="newQuote.name" name="name" #name="ngModel" required></textarea>
+      <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+        <p>Author is required</p>
       </div>
-        <div class="form-group" style="font-weight: 900;">
+
+    </div>
+      <!-- <div class="form-group" style="font-weight: 900;">
   
-            <label for="description">Author</label>
-            <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description" name="description" #description="ngModel" required></textarea>
-            <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
-              <p>Author is required</p>
-            </div>
+        <label for="description">Quote</label>
+        <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description" name="description" #description="ngModel" required></textarea>
+        <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
+          <p>Quote is required</p>
         </div>
+    </div> -->
+        <!-- <div class="form-group" style="font-weight: 900;">
+  
+          <label for="description">AUTHOR</label>
+          <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description" name="description" #description="ngModel" required></textarea>
+          <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
+            <p>Author is required</p>
+          </div>
+
+        </div> -->
+        
         <div class="form-group" style="font-weight: 900;">
   
             <label for="complete">Date</label>
@@ -37,4 +49,3 @@
         <button type="submit" class="btn btn-success" style="font-weight: 1000;">Add Quote</button>
     </form>
   </div>
-  
